fix: 退款逻辑修复